# SanWenYu

./: AGENTS.md  DEPENDENCIES.md  README.md  config.example.yaml  pyproject.toml
src/kouhai_bot/: statement_render.py
src/kouhai_bot/handlers/: shared.py
src/kouhai_bot/handlers/cmd/: newproblem.py  stubs.py
src/kouhai_bot/problems/: fetcher.py  picker.py
src/sanwenyu/: config.py  editorial_followup.py  eventlog.py  llm.py  main.py  statement_render.py  worker.py
src/sanwenyu/annotations/: exporter.py
src/sanwenyu/handlers/: __init__.py  registry.py  shared.py
src/sanwenyu/handlers/cmd/: clarify.py  clear.py  newproblem.py  review.py  stubs.py  submit.py  tutorial.py
src/sanwenyu/napcat/: client.py
src/sanwenyu/problems/: fetcher.py  picker.py
src/sanwenyu/scheduler/: engine.py
tests/: test_achievements.py  test_annotations.py  test_commands.py  test_config.py  test_eventlog.py  test_eventlog_backfill.py  test_fetcher_config.py  test_friend_requests.py  test_main.py  test_main_cli.py  test_napcat.py  test_newproblem_notes.py  test_picker_samples.py  test_registry.py  test_scheduler.py  test_shared.py  test_tutorial_quality.py  test_tutorials.py  test_user_groups.py
tools/: annotation_server.py  backfill_command_events.py  tutorial_tools.py
