[project]
name = "SanWenYu"
version = "0.1.0"
description = "SanWenYu — QQ 群算法竞赛助手"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "cloudscraper>=1.2",
    "Pillow>=10.0",
    "playwright>=1.45",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
]

[project.scripts]
SanWenYu = "sanwenyu.main:main"
start = "sanwenyu.main:start"
restart = "sanwenyu.main:restart"
stop = "sanwenyu.main:stop"
status = "sanwenyu.main:status"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sanwenyu"]
